// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keyword-expressions.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
  {{true.foo}}
  {{foo.[true]}}
  {{false.foo}}
  {{foo.[false]}}
  {{null.foo}}
  {{foo.[null]}}
  {{undefined.foo}}
  {{foo.[undefined]}}
</div>

=====================================output=====================================
<div>
  {{true.foo}}
  {{foo.[true]}}
  {{false.foo}}
  {{foo.[false]}}
  {{null.foo}}
  {{foo.[null]}}
  {{undefined.foo}}
  {{foo.[undefined]}}
</div>
================================================================================
`;

exports[`literal-expressions.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
  {{array.[true]}}
  {{array.2.[@#].[1]}}
  {{array.2.[a b]}}
  {{this.test}}
  {{#if @foo}}
  {{/if}}
  <!-- legacy path format, which glimmer does not parse - we don't want to wrap with brackets -->
  {{foo/bar/baz ab=cd}}
</div>

=====================================output=====================================
<div>
  {{array.[true]}}
  {{array.[2].[@#].[1]}}
  {{array.[2].[a b]}}
  {{this.test}}
  {{#if @foo}}{{/if}}
  <!-- legacy path format, which glimmer does not parse - we don't want to wrap with brackets -->
  {{foo/bar/baz ab=cd}}
</div>
================================================================================
`;

exports[`numeric-expressions.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
  {{people.[1].name}}
  {{people.[1]}}
  {{array.[1].barray.[13]}}
  {{array.[1234]}}
  {{array.[123].[item-class]}}
  {{array.[12].item}}
  {{people.[1a]}}
</div>

<ul class="people_list">
  {{#each people}}
  <li>{{array.[2]}}</li>
  {{/each}}
</ul>

<div>
  {{#if @foo}}
  {{bar.[1]}}
  {{bar.1.name}}
  {{/if}}
</div>

=====================================output=====================================
<div>
  {{people.[1].name}}
  {{people.[1]}}
  {{array.[1].barray.[13]}}
  {{array.[1234]}}
  {{array.[123].item-class}}
  {{array.[12].item}}
  {{people.[1a]}}
</div>

<ul class="people_list">
  {{#each people}}
    <li>{{array.[2]}}</li>
  {{/each}}
</ul>

<div>
  {{#if @foo}}
    {{bar.[1]}}
    {{bar.[1].name}}
  {{/if}}
</div>
================================================================================
`;
